[package]
name = "coffeed-coffee-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-web = "^2.0.0"
actix-rt = "^1.1.1"
# GraphQL
async-graphql = "^1.10.12"
async-graphql-actix-web = "^1.2.12"
# URLs
url = "^2.1.1"
# DateTime and Timezone
chrono = "^0.4.11"
# Serde for json serialization
serde = { version = "^1.0.111", features = ["derive"] }
# DB Client
# lucid-client = "0.2.0"
# postgres = "0.17.3"
# wither = "0.8.0"
mongodb = "^0.11.0"
bson = "^1.0.0"
futures = "^0.3.5"
# Unique ID generator
nanoid = "^0.3.0"
