[package]
name = "coffeed-coffee-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
# HTTP Server
actix-web = { version = "^2.0.0", default-features = false }
# WebSocket
actix-web-actors = "2.0.0"
# Runtime
actix-rt = "^1.1.1"
# CORS
actix-cors = "^0.2.0"
# GraphQL
async-graphql = "^2.0.10"
async-graphql-actix-web = "^1.17.3"
# Type-Safe URLs
url = "^2.1.1"
# DateTime and Timezone
chrono = "^0.4.13"
# Serde for json serialization
serde = { version = "^1.0.115", features = ["derive"] }
# DB Client
# lucid-client = "0.2.0"
# postgres = "0.17.3"
wither = "0.9.0-alpha.1"
mongodb = "^1.0.0"
# bson = "^1.0.0"
# Needed for the subscriptions (this is already a dependency of actix)
# tokio = "0.2.6"
# Needed for some traits
futures = "0.3.5"
# Unique ID generator
# nanoid = "^0.3.0"
